# knowledge-base-organizer

./: .gitignore  .pre-commit-config.yaml  FIX_AUTO_LINK.md  README.md  auto-link-issues-analysis.md  bandit.yaml  custom_llm_test.yaml  noxfile.py  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
.gemini/: GEMINI.md  MEMORY.md  settings.json
.kiro/: japanese_variations.yaml  tag_patterns.json
.kiro/specs/frontmatter-type-conversion/: requirements.md
.kiro/specs/knowledge-base-organizer/: design.md  requirements.md  tasks.md
.kiro/steering/: algorithm-verification-guidelines.md  code-quality-workflow.md  commit-message-guidelines.md  mcp-integration.md  python-best-practices.md  safe-development-workflow.md  script-architecture-principles.md  script-organization-guidelines.md  senior-python-engineer.md  task-completion-workflow.md
.kiro/tag_patterns/: japanese_variations.yaml  tag_patterns.json  vault_tag_analysis.json
docs/: tag_management_guide.md
docs/source/: conf.py  index.rst  modules.rst  uv_python_project_template.rst  uv_python_project_template.sub_module.rst
experiments/: README.md  debug_exclusion_zones_20250123.py  debug_frontmatter_state_20250123.py  debug_lrd_lines_20250123.py  debug_lrd_test_failure_20250123.py  test_better_patterns.py  test_better_patterns_20250102.py  test_cli_json_debug_20250104.py  test_cli_json_output_20250104.py  test_control_character_debug_20250104.py  test_dead_link_detection_real_data_20250105.py  test_exclude_patterns_20250102.py  test_helper_functions_20250104.py  test_lrd_detection_20250123.py  test_lrd_exclusion_20250123.py  test_pattern_matching.py  test_regex_patterns.py
experiments/experiment_results/: README.md  dead_links_test.csv  dead_links_test.json  filtered_dead_links.json  test_output.json
experiments/template_parsing/: test_template_schema_extraction_20250102.py
scripts/: check_frontmatter.sh
scripts/development/: README.md  full_check.sh  full_quality_check.sh  quick_commit_check.sh  setup_fast_dev.sh
scripts/testing/: test_auto_linking_task_7_4.sh
src/knowledge_base_organizer/: __init__.py  __main__.py  main.py
src/knowledge_base_organizer/application/: __init__.py  auto_link_generation_use_case.py  dead_link_detection_use_case.py  frontmatter_validation_use_case.py  vault_analyzer.py
src/knowledge_base_organizer/cli/: __init__.py  ai_command.py  ask_command.py  di_setup.py  index_command.py  llm_command.py  main.py  maintain_command.py  organize_command.py  summarize_command.py  tag_management.py
src/knowledge_base_organizer/config/: keyword_extraction.yaml  llm_config.yaml
src/knowledge_base_organizer/domain/: models.py
src/knowledge_base_organizer/domain/services/: __init__.py  ai_services.py  content_analysis_service.py  content_processing_service.py  frontmatter_enhancement_service.py  frontmatter_validation_service.py  keyword_extraction_manager.py  link_analysis_service.py  tag_pattern_manager.py  yaml_type_converter.py
src/knowledge_base_organizer/infrastructure/: __init__.py  config.py  di_container.py  faiss_vector_store.py  file_repository.py  llm_config.py  llm_factory.py  ollama_embedding.py  ollama_llm.py  openai_compatible_llm.py  template_schema_repository.py
src/knowledge_base_organizer/sub_module/: __init__.py  submodule1.py
test-vault/: file1-copy.md  file1.md  file2.md  similar-filename.md  unique-file.md
tests/: test_analyze_command.py  test_basic_functionality.py  test_file_repository_vault_scanning.py  test_main.py  test_markdown_file.py
tests/application/: test_auto_link_generation_semantic.py  test_frontmatter_validation_use_case.py  test_real_vault_analysis.py
tests/cli/: __init__.py  test_analyze_command.py  test_ask_command.py  test_detect_dead_links_command.py  test_index_command.py  test_llm_command.py  test_maintain_command.py  test_organize_command.py  test_summarize_command.py  test_utils.py  test_validate_frontmatter_command.py
tests/domain/: test_markdown_file.py
tests/domain/services/: test_content_analysis_service.py  test_english_japanese_translation.py  test_frontmatter_enhancement_service_ai.py  test_frontmatter_validation_service.py
tests/infrastructure/: test_di_container.py  test_faiss_vector_store.py  test_file_repository_frontmatter_protection.py  test_file_repository_vault_scanning.py  test_llm_config.py  test_llm_factory.py  test_ollama_embedding.py  test_ollama_llm.py  test_openai_compatible_llm.py  test_template_schema_repository.py
tests/integration/: test_ai_enhanced_organize_end_to_end.py  test_auto_link_bug_fixes.py  test_auto_link_generation_task_7_4.py  test_automatic_organization_end_to_end.py  test_dead_link_detection_end_to_end.py  test_dead_link_detection_task_6_4.py  test_frontmatter_validation_end_to_end.py  test_integration_vault_structure.py  test_llm_configuration_integration.py
tests/test-data/vaults/test-myvault/.kiro/: tag_patterns.json
tests/test-data/vaults/test-myvault/100_FleetingNotes/: 20230624195203.md  20240227205734.md  20250310103733.md
tests/test-data/vaults/test-myvault/101_PermanentNotes/: 20230624175527.md  20230709211042.md  20230730200042.md  20230808222507.md  20240422225316.md  20240423201410.backup_20251024_230444.bak  20240520185933.backup_20251024_230053.bak  20240520185933.backup_20251024_233632.bak  20240520185933.backup_20251024_233848.bak  20240520185933.md  20241116105142.md  test_external_link.backup_20251024_223151.bak  test_external_link.md  test_frontmatter_protection.backup_20251024_230444.bak  test_frontmatter_protection.md
tests/test-data/vaults/test-myvault/104_Books/: AWS認定資格試験テキスト＆問題集 AWS認定ソリューションアーキテクト - プロフェッショナル 改訂第2版 - 山下光洋.md  人月の神話 - Jr ブルックス フレデリック・P.md
tests/test-data/vaults/test-myvault/900_TemplaterNotes/: blog-template.md  daily-note.md  new-fleeing-note.md  wikilnk-fleet.md  (+1 more)
tests/test_output_results/: README.md
tests/unit/application/: test_dead_link_detection_use_case.py
tests/unit/domain/services/: test_content_processing_service.py  test_keyword_extraction_manager.py  test_link_analysis_service.py  test_yaml_type_converter.py
(+1 files in other folders)
