[project]
name = "knowledge-base-organizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.9",
    "typer>=0.19.2",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.32.5",
    "faiss-cpu>=1.12.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "hypothesis>=6.140.2",
    "isort>=6.0.1",
    "licensecheck>=2025.1.0",
    "lizard>=1.18.0",
    "mypy>=1.18.2",
    "nox==2025.02.09",
    "pip-audit>=2.9.0",
    "pre-commit>=4.3.0",
    "pre-commit-hooks>=6.0.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.13.2",
    "safety>=3.6.2",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]

doc = [
    "furo>=2025.9.25",
    "jupytext>=1.17.3",
    "myst-parser>=4.0.1",
    "nbsphinx>=0.9.7",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
]

[project.scripts]
knowledge-base-organizer = "knowledge_base_organizer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]

# Ignore specific rules that are too strict for our use case
ignore = [
    "B008",    # Do not perform function calls in argument defaults (typer pattern)
    "FBT001",  # Boolean typed positional argument
    "FBT003",  # Boolean positional value in function call
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Use of assert detected (pytest uses asserts)
    "PLR2004", # Magic value used in comparison (test constants)
]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
strict = true
warn_return_any = true
warn_unused_configs = true
